--- a/2themedesign_ex/css/count6.css
+++ b/2themedesign_ex/css/count6.css
@@ -2,10 +2,10 @@
 .cover{
     line-height:70px;
     width:100%;
-    height:200px;
+    height:300px;
     text-align:center;
     font-family:"Courier New", Courier, monospace;
-    background:url(https://i.imgur.com/GqMICtx.jpg) center center/cover no-repeat;
+    background:url(../imgs/sea.jpg) center center/cover no-repeat;
     border-radius: 7px;
 }
 
