--- a/c5_ek/8m_map_bootstrap/m_myLoc.css
+++ b/c5_ek/8m_map_bootstrap/m_myLoc.css
@@ -4,6 +4,7 @@
 */
 
 body {
+	background-color: rgb(59, 59, 59);
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 10px;
 }
@@ -15,13 +16,14 @@ div#map {
 	margin: 5px;
 	width: auto;
 	height: 400px;
-	border: 1px solid black;
+	border: 1px solid rgb(97, 97, 97);
+	background-color: rgb(192, 192, 192);
 }
 
 div#location {
-	color: blue;
+	color: rgb(224, 224, 224);
 }
 
 div#distance {
-	color: blue;
+	color: rgb(224, 224, 224);
 }
