--- a/c7_2_ex/prob4_mobile/method4_mobile-width/index_mo.css
+++ b/c7_2_ex/prob4_mobile/method4_mobile-width/index_mo.css
@@ -1,4 +1,6 @@
-canvas {
-	border: 5px dotted lightblue;
+canvas#tshirtCanvas {
+	margin: 0 auto;
+	height: 66%;
+	width: 99%;
+	border: 1px solid black;
 }
-
